[style] Fix overflow issues with join-modal

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -15,7 +15,7 @@ body {
   margin-top: 100px;
 }
 
-/***************************/
+/*MAP**************************/
 
 .map {
   width: 100%;
@@ -92,7 +92,7 @@ input[type=search] {
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button {
-  display: none; 
+  display: none;
 }
 
 
@@ -101,11 +101,11 @@ input[type=search] {
   border: solid 1px #ccc;
   padding: 9px 10px 9px 32px;
   width: 55px;
-  
+
   -webkit-border-radius: 10em;
   -moz-border-radius: 10em;
   border-radius: 10em;
-  
+
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
   transition: all .5s;
@@ -114,7 +114,7 @@ input[type=search]:focus {
   width: 130px;
   background-color: #fff;
   border-color: #66CC75;
-  
+
   -webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
   -moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
   box-shadow: 0 0 5px rgba(109,207,246,.5);
@@ -128,4 +128,10 @@ input::-webkit-input-placeholder {
   color: #999;
 }
 
+/*MODALS*****************************************/
 
+.modalImage {
+  max-width: 95%;
+  position: relative;
+  margin: 10px auto;
+}
